log/build_2025-03-18_14-28-11/arm_gui/stderr.log
  File "/home/nahian/Desktop/tb_ws/install/arm_gui/lib/python3.10/site-packages/arm_gui/gui_run.py", line 56
    tk.Button(frame, text="▶",width=2 command=lambda idx=i: self.move_slider(idx, 1)).pack(side=tk.LEFT, padx=2)
                                      ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

